--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
         "@material-ui/core": "^4.12.4",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.61",
+        "@mui/x-data-grid": "^5.11.0",
         "@redux-devtools/core": "^3.9.0",
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "material-table": "^2.0.3",
+        "mui-datatables": "^4.2.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-table": "^7.8.0",
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
