--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-spreadsheet": "^0.7.7",
         "react-table": "^7.8.0",
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
+        "scheduler": "^0.23.0",
         "sweetalert2": "^11.0.18",
         "thunk": "0.0.1",
         "web-vitals": "^1.1.2"
